--- a/css/experimental.css
+++ b/css/experimental.css
@@ -13,14 +13,18 @@
     url(https://spax.zone/fonts/DEP/DEP.otf) format("opentype");
 }
 
+html {
+  height: 100vh;
+}
+
 html,
 body {
   inset: 0;
   width: 100vw;
-  height: 100vh;
   padding: 0;
   margin: 0;
   overflow: hidden auto;
+  overscroll-behavior: none;
   image-rendering: pixelated;
   font-smooth: never;
   -webkit-font-smoothing: none;
@@ -33,7 +37,7 @@ body {
   --c4: #071821;
 }
 
-body {
+body, #bg {
   font-family: DEP;
   font-size: 21px;
   display: flex;
@@ -73,6 +77,7 @@ body > *:last-of-type(article) {
 }
 
 article {
+  position: relative;
   border: 3px solid var(--c1);
   letter-spacing: 4.5px;
   line-height: 23px;
